Fixed dirty flags on stress shifting

--- a/static/scss/charsheet/_stress.scss
+++ b/static/scss/charsheet/_stress.scss
@@ -1,6 +1,26 @@
 
 #stress.sheet-panel
 {
+	input#shifter
+	{
+		display:none;
+
+		& + label
+		{
+			display: inline-block;
+			width: 70px;
+			height: 25px;
+			margin: 0 -1px -3px 0;
+			background-image: url('/static/img/shifter_human.svg');
+			cursor: pointer;
+		}
+
+		&:checked + label {
+			background-image: url('/static/img/shifter_animal.svg');
+		}
+	}
+
+
 	input[type="checkbox"].stressBox
 	{
 		display: none;
